--- a/operations.html
+++ b/operations.html
@@ -58,7 +58,7 @@
             </li>
             <li>
               <a href="youth.html" class="main-header_nav__link news"
-                ><i class="material-icons"> child_friendly</i>
+                ><i class="material-icons">emoji_emotions</i>
                 Mladina</a
               >
             </li>
