--- a/youth.html
+++ b/youth.html
@@ -59,7 +59,7 @@
             </li>
             <li>
               <div class="main-header_nav__link active home">
-                <i class="material-icons"> child_friendly</i>
+                <i class="material-icons">emoji_emotions</i>
                 Mladina
               </div>
             </li>
