--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
             </li>
             <li>
               <a href="youth.html" class="main-header_nav__link news"
-                ><i class="material-icons"> child_friendly</i> Mladina</a
+                ><i class="material-icons">emoji_emotions</i> Mladina</a
               >
             </li>
             <li>
