--- a/help_us.html
+++ b/help_us.html
@@ -59,7 +59,7 @@
             </li>
             <li>
               <a href="youth.html" class="main-header_nav__link membership"
-                ><i class="material-icons">child_friendly</i>Mladina</a
+                ><i class="material-icons">emoji_emotions</i>Mladina</a
               >
             </li>
             <li>
