--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
     </header>
 
     <main class="index-main">
-      <section class="greeting-animation">
-        <div class="banner">
-          <div class="blocks"></div>
-        </div>
-      </section>
+     // <section class="greeting-animation">
+     //   <div class="banner">
+     //     <div class="blocks"></div>
+     //   </div>
+     // </section>
       <section class="showcase">
         <div class="video-container">
           <video src="media/videos/Videozapis.MOV" autoplay muted loop></video>
