--- a/operations.html
+++ b/operations.html
@@ -308,6 +308,10 @@
         shadowOffset: 20,
         shadowScale: 0.94,
       },
+      navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
       loop: true,
     });
   </script>
