--- a/services.html
+++ b/services.html
@@ -205,6 +205,10 @@
           shadowOffset: 20,
           shadowScale: 0.94,
         },
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
         loop: true,
       });
     </script>
